k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ##SERVICE_NAMESPACE##
  labels: 
    environment: ##ENVIRONMENT##
