k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ##SERVICE_NAME##-svc
  namespace: ##SERVICE_NAMESPACE##
  labels: 
    app: ##SERVICE_NAME##
    environment: ##ENVIRONMENT##
spec:
  selector:
    app: ##SERVICE_NAME##
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
